feat: implement loading of ground truth without data because there were no analyzed changes